/*
 * $Id: ChangeLog,v 1.1494 2015-06-21 14:44:08 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2015-06-21 11:43 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./changelog.htm
     ! Typo in previous entry.
   * manual/changelog.htm
     * Updated.
   * source/h_browse.prg
     ! TOBrowse:EditCell passes wrong parameters to ::Super:EditCell().
     ! TOBrowse:EditGrid() with lAppend parameter set to .T. does not
       add a new row before editing.
     ! Support of lOneRow parameter in TOBrowse:EditGrid().
   * source/h_xbrowse.prg
     + Data lForceInPlace: when .F. TXBrowse:EditItem() will edit items
       using an independent modal window (just like Grid does).
     ! TXBrowse:EditItem() does not add a new item to the grid when
       INPLACE is .T.
     * TXBrowse:EditItem_B() no longer checks for ::lAppendMode because
       the check is done at TXBrowse:EditItem().
     ! TXBrowse:EditItem_B() does not reposition correctly after an
       edition is aborted.
     ! TXBrowse:EditCell shows values when DEFAULTVALUES clause is
       not used.
     ! TXBrowse:EditCell changes row position after editing a cell thats
       part of an index key.
   * source/h_grid.prg
     ! Function _GetGridCellData is not detecting clicks on empty rows.

2015-06-15 17:55 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./changelog.htm
     ! Typo in previous entry.
   * manual/changelog.htm
     * Updated.
   * source/h_xbrowse.prg
     ! RTE at :EditItem(.T.) caused by change in parameter's order.
       Use TXBrowse:EditItem( lAppend, lOneRow, nItem, lChange ).

2015-06-08 21:15 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * manual/changelog.htm
     * Updated.
   * ide/prgs/formedit.prg
     ! Support for DEFAULTVALUES clause.

2015-06-08 20:51 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>