@@ -1,5 +1,5 @@
 <!--
-$Id: Changelog.htm,v 1.61 2015-06-21 14:44:09 fyurisich Exp $
+$Id: Changelog.htm,v 1.62 2015-06-28 02:02:37 fyurisich Exp $
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -142,6 +142,14 @@ CHANGELOG</div>
 </div>
 <div id="winchm_template_content">
 <pre>
+2015-06-27 23:02 UTC-0300 Fernando Yurisich &lt;fyurisich@oohg.org&gt;
+   * manual/changelog.htm
+     * Updated.
+   * source/c_gdiplus.c
+     ! GdipCreateHBITMAPFromBitmap loads some images with wrong color.
+   * source/h_picture.prg
+     * Format.
+
 2015-06-21 11:43 UTC-0300 Fernando Yurisich &lt;fyurisich@oohg.org&gt;
    * ./changelog.htm
      ! Typo in previous entry.
